--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,8 +1,8 @@
 .main {
     display: flex;
     justify-content: center;
+    height: 100%;
     background-color: #F6F8FD;
-    height: 100vh;
 }
 
 .main-wrapper {
