--- a/src/components/NewRequest/NewRequest.scss
+++ b/src/components/NewRequest/NewRequest.scss
@@ -77,6 +77,7 @@
       padding-bottom: 5px;
       font-size: 13px;
       line-height: 18px;
+      letter-spacing: 0.4px;
       display: flex;
       img:hover {
         fill: blue;
