feat: add confirm-modals

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   font-family: "Open Sans", sans-serif;
   z-index: 1;
+  box-shadow: inset 0px -4px #1753B3;
 }
 
 .header__body {
@@ -123,5 +124,6 @@
     display: flex;
     align-items: center;
     border-bottom: 4px solid #5495ff;
+    
   }
 }
