--- a/src/components/NewRequest/NewRequest.scss
+++ b/src/components/NewRequest/NewRequest.scss
@@ -79,8 +79,14 @@
       line-height: 18px;
       letter-spacing: 0.4px;
       display: flex;
-      img:hover {
-        fill: blue;
+      .question {
+        cursor: pointer;
+        width: 16px;
+        height: 16px;
+        background: url(../../assets/Question.svg);
+        &:hover {
+          background: url(../../assets/Question-hover.svg);
+        }
       }
     }
     .date-block__calculate {
@@ -140,6 +146,7 @@
     color: #5495ff;
   }
   .submit-btn {
+    cursor: pointer;
     width: 101px;
     height: 36px;
     color: white;
