--- a/src/components/RequestsList/RequestsList.scss
+++ b/src/components/RequestsList/RequestsList.scss
@@ -12,21 +12,22 @@
   .year__group {
     background: #5495FF;
     color: white;
-    width: 655px;
-    height: 20px;
+    width: 645px;
+    height: 19px;
     font-size: 12px;
+    letter-spacing: -0.2px;
     align-items: center;
-    padding-top: 4px;
-    padding-left: 20px;
+    padding-top: 2px;
+    padding-left: 30px;
   }
 }
 
 .title {
   padding: 21px;
-  padding-left: 23.8px;
+  padding-left: 25px;
   font-size: 18px;
   letter-spacing: 0.4px;
   line-height: 24px;
   width: 100%;
-  height: 20px;
+  height: 23px;
 }
