--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
+
+
 * {
   padding: 0;
   margin: 0;
-  
 }
 
 .container {
@@ -16,6 +17,19 @@
   border-radius: 5px;
   position: relative;
   box-shadow: 0px 0px 4px 0px rgba(34, 60, 80, 0.137);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.349);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
