feat: add update action

--- a/src/components/RequestsList/RequestsList.scss
+++ b/src/components/RequestsList/RequestsList.scss
@@ -1,6 +1,6 @@
 .requests-list__content {
   width: 675px;
-  height: 671px;
+  min-height: 671px;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
