--- a/src/components/CustomTooltip/CustomTooltip.scss
+++ b/src/components/CustomTooltip/CustomTooltip.scss
@@ -27,10 +27,12 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 14px;
-  bottom: 30px;
-  width: 340px;
-  height: 140px;
+  font-size: 12px;
+  margin-left: 7px;
+  bottom: 25px;
+  width: 280px;
+  height: 130px;
+  
   padding: 21px 30px;
   background-color: white;
   box-shadow: 0px 2px 10px rgba(32, 75, 146, 0.15);
