feat: add vacation-days-reducer

--- a/src/components/RequestsList/RequestsList.scss
+++ b/src/components/RequestsList/RequestsList.scss
@@ -10,7 +10,7 @@
     margin-top: 195px;
   }
   .year__group {
-    background: #5495FF;
+    background: #5495ff;
     color: white;
     width: 645px;
     height: 19px;
