--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,16 +1,16 @@
 .main {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    background-color: #F6F8FD;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  background-color: #f6f8fd;
 }
 
 .main-wrapper {
-    width: 1220px;
-    display: flex;
+  width: 1220px;
+  display: flex;
 }
 
 .select-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
